<resources>    <string name="app_name">Movie UI UX</string>    <string name="navigation_drawer_open">Open navigation drawer</string>    <string name="navigation_drawer_close">Close navigation drawer</string>    <string name="nav_header_title">Android Studio</string>    <string name="nav_header_subtitle">android.studio@android.com</string>    <string name="nav_header_desc">Navigation header</string>    <string name="action_settings">Settings</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="search_movie">Search Movie</string>    <string name="home">Home</string>    <string name="search">Search</string>    <string name="movie_title">Movie Title</string>    <string name="release_of_date">Release of Date</string>    <string name="movies_description">Movies Description</string>    <string name="detail">Detail</string>    <string name="favorite">Favorite</string>    <string name="home_title">Home</string>    <string name="now_playing">Now Playing</string>    <string name="upcoming">Upcoming</string>    <string name="popularity">Popularity</string>    <string name="rating">Rating</string>    <string name="overview">Overview</string>    <string name="movie_detail">Movie Detail</string>    <string name="user_view">users view</string></resources>