<?xml version="1.0" encoding="utf-8"?><android.support.v7.widget.CardView    xmlns:android="http://schemas.android.com/apk/res/android"    android:paddingTop="6dp"    android:paddingBottom="6dp"    android:layout_marginTop="6dp"    android:layout_width="match_parent"    android:layout_height="wrap_content">    <LinearLayout        android:orientation="horizontal"        android:layout_width="match_parent"        android:layout_height="match_parent">        <ImageView            android:id="@+id/poster"            android:padding="6dp"            android:layout_width="120dp"            android:layout_height="200dp"            android:src="@mipmap/ic_launcher" />        <LinearLayout            android:orientation="vertical"            android:paddingLeft="10dp"            android:layout_width="match_parent"            android:layout_height="200dp">            <LinearLayout                android:layout_width="match_parent"                android:layout_height="150dp"                android:orientation="vertical">                <TextView                    android:id="@+id/title"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:maxLines="1"                    android:text="@string/movie_title"                    android:textSize="26sp"                    android:textStyle="bold" />                <TextView                    android:id="@+id/release"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:paddingBottom="4dp"                    android:paddingTop="4dp"                    android:text="@string/release_of_date" />                <TextView                    android:id="@+id/overview"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:maxLines="5"                    android:paddingBottom="4dp"                    android:paddingTop="4dp"                    android:text="@string/movies_description" />            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="50dp">                <Button                    android:id="@+id/btnDetail"                    android:text="@string/detail"                    style="@style/Widget.AppCompat.Button.Colored"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content" />                <Button                    android:id="@+id/btnFavorite"                    android:text="@string/favorite"                    style="@style/Widget.AppCompat.Button.Colored"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content" />            </LinearLayout>        </LinearLayout>    </LinearLayout></android.support.v7.widget.CardView>