<?xml version="1.0" encoding="utf-8"?><android.support.design.widget.CoordinatorLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".DetailActivity">    <android.support.design.widget.AppBarLayout        android:fitsSystemWindows="true"        android:id="@+id/appbar"        android:layout_width="match_parent"        android:layout_height="256dp">        <android.support.design.widget.CollapsingToolbarLayout            android:id="@+id/collaps"            android:fitsSystemWindows="true"            app:expandedTitleMarginEnd="64dp"            app:expandedTitleMarginStart="48dp"            android:padding="8dp"            app:layout_scrollFlags="scroll|exitUntilCollapsed"            app:contentScrim="@color/colorPrimary"            android:layout_width="match_parent"            android:layout_height="match_parent">            <ImageView                android:id="@+id/detail_poster"                app:layout_collapseMode="parallax"                android:layout_width="match_parent"                android:layout_height="250dp"                android:src="@mipmap/ic_launcher" />            <android.support.v7.widget.Toolbar                android:id="@+id/toolbar"                app:layout_scrollFlags="scroll|enterAlways"                app:layout_collapseMode="pin"                android:layout_width="match_parent"                android:layout_height="?attr/actionBarSize">            </android.support.v7.widget.Toolbar>        </android.support.design.widget.CollapsingToolbarLayout>    </android.support.design.widget.AppBarLayout>    <android.support.v4.widget.NestedScrollView        app:layout_behavior="@string/appbar_scrolling_view_behavior"        android:layout_width="match_parent"        android:layout_height="match_parent">        <LinearLayout            android:orientation="vertical"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:padding="10dp"                android:id="@+id/detail_title"                tools:text="Movie Title"                android:textSize="30sp"                android:textStyle="bold"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:text="@string/rating"                android:textStyle="bold"                android:padding="10dp"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detail_rating"                android:padding="10dp"                tools:text="@string/rating"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:text="@string/release_of_date"                android:padding="10dp"                android:textStyle="bold"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detail_release"                android:padding="10dp"                tools:text="@string/release_of_date"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:text="@string/popularity"                android:textStyle="bold"                android:padding="10dp"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detail_popularity"                android:padding="10dp"                tools:text="@string/popularity"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:text="@string/overview"                android:textStyle="bold"                android:padding="10dp"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detail_overview"                android:padding="10dp"                tools:text="@string/overview"                android:layout_width="match_parent"                android:layout_height="wrap_content" />        </LinearLayout>    </android.support.v4.widget.NestedScrollView></android.support.design.widget.CoordinatorLayout>